# agent_kanban

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API-REFERENCE.md  API-REFERENCE.zh-TW.md  MVP-STATUS.md  MVP-STATUS.zh-TW.md  README.zh-TW.md  status.html
docs/design/: agent-invocation-and-adapters.md  coding-service-tool-api.md  opencode-two-container-analysis.md  prompt-injection-defense.md  symphony-dashboard-spec.md
docs/guide/: docker-dev-environment.md  docker-dev-environment.zh-TW.md  docker-quickstart.md  docker-quickstart.zh-TW.md  user-manual.md  user-manual.zh-TW.md
examples/: WORKFLOW.demo-echo.md  WORKFLOW.docker.md  WORKFLOW.md  demo_echo.py  tool_api_client.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.tsx  (+13 more)
scripts/: dev.sh
symphony_mvp/: __init__.py  __main__.py  agent_runner.py  checkpoint.py  escalation.py  models.py  orchestrator.py  tracker.py  workflow.py  workspace.py
tests/: conftest.py  test_agent_runner.py  test_checkpoint.py  test_dashboard_bridge.py  test_dashboard_extras.py  test_dashboard_orchestrator.py  test_dashboard_server.py  test_decompose.py  test_escalation.py  test_linear_tracker.py  test_metrics.py  test_mode.py  test_orchestrator.py  test_repo_inspect.py  test_stage.py  test_task_result.py  test_tool_api.py  test_workflow.py  test_workspace.py
(+47 files in other folders)
