[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony-mvp"
version = "0.1.0"
description = "Python MVP of the openai/symphony spec — Codex-free, Claude/local-LLM friendly."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Symphony MVP Contributors" }]
dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "requests>=2.31",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-timeout>=2.2", "pytest-asyncio>=0.23", "httpx>=0.27"]
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "starlette>=0.36",
]

[project.scripts]
symphony-mvp = "symphony_mvp.__main__:main"
symphony-dashboard = "symphony_mvp.dashboard.__main__:main"

[tool.setuptools.packages.find]
include = ["symphony_mvp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=30"
